# packet_processor

./: CMakeLists.txt  README.md
benchmarks/: benchmark.cpp
examples/: CMakeLists.txt  basic_capture.cpp  connection_monitor.cpp  packet_capture_example.cpp
include/packet_processor/: packet_processor.h
include/packet_processor/capture/: packet_capture.h
include/packet_processor/core/: packet.h  zero_copy_buffer.h
include/packet_processor/parser/: protocol_parser.h
include/packet_processor/processing/: thread_pool.h  zero_copy_buffer.h
include/packet_processor/protocol/: connection_tracker.h  protocol_parser.h
include/packet_processor/util/: logger.h  statistics.h
src/: main.cpp  packet_processor.cpp
src/capture/: packet_capture.cpp
src/core/: zero_copy_buffer.cpp
src/parser/: protocol_parser.cpp
src/processing/: thread_pool.cpp  zero_copy_buffer.cpp
src/protocol/: connection_tracker.cpp  tcp_ip_parser.cpp
src/util/: logger.cpp  statistics.cpp
